--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gsap-trial": "^3.11.4",
     "joi": "^17.7.0",
     "lodash": "^4.17.21",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-image-turntable": "^3.1.2",
@@ -24,6 +26,7 @@
     "react-scrollspy": "^3.4.3",
     "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
+    "scrollmagic": "^2.0.8",
     "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
   },
